classDiagram
    direction LR
    class Member {
        <<abstract>>
        +UUID id
        +String firstName
        +String lastName
        +String email
        +String phoneNumber
        +String address
        +Date birthday
        +Date joiningDate
        +String information
        +Role role
        +updateProfile()
    }
    class Trainee {
        +requestAIReport()
    }
    class Coach {
        +createEvent()
        +submitFeedback()
        +manageMembers()
        +generateLetter()
        +requestAIReport()
    }
    class Director {
        +manageTeamRoster()
        +manageBalances()
        +manageMembers()
        +generateLetter()
        +createEvent()
    }
    class Admin {
        +manageSportsAndTeams()
        +manageRoles()
    }

    Member <|-- Trainee
    Member <|-- Coach
    Member <|-- Director
    Member <|-- Admin

    class Sport {
        +UUID id
        +String name
        +String description
    }
    class Team {
        +UUID id
        +String name
        +String description
        +String address
    }
    class Event {
        +UUID id
        +String name
        +String description
        +Instant startTime
        +Instant endTime
        +createEvent()
    }
    class Feedback {
        +UUID id
        +Integer rating
        +String feedback
        +Instant createdAt
        +submitFeedback()
    }
    class Transaction {
        +UUID id
        +int amountCents
        +String title
        +String description
        +Instant createdAt
        +recordTransaction()
    }
    class Letter {
        +String subject
        +String content
        +generatePdf()
        +sendMail()
    }
    class Report {
        +UUID id
        +String kind
        +String text
        +Instant createdAt
    }

    Director "*" --> "*" Sport : directs
    Sport "1" --> "*" Team : offers
    Coach "*" --> "*" Team : coaches
    Trainee "*" --> "*" Team : belongs to
    Team "1" --> "*" Report : subject of
    Coach "1" --> "*" Feedback : writes
    Event "1" --> "*" Feedback : about
    Trainee "1" --> "*" Feedback : receives
    Event "*" --> "*" Trainee : attendance
    Trainee "1" --> "*" Transaction : owns
    Trainee "1" --> "*" Letter : recipient of
    Trainee "1" --> "*" Report : subject of
